examples/micro-services/services/.kube/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${values:deployment}
  labels:
    app: ${values:name}
    version: ${values:subset}
spec:
  replicas: ${values:replicas}
  selector:
    matchLabels:
      app: ${values:name}
      version: ${values:subset}
  template:
    metadata:
      labels:
        app: ${values:name}
        version: ${values:subset}
    spec:
      serviceAccountName: ${values:serviceAccount}
      containers:
        - name: ${values:name}
          image: ${values:image.repository}:${values:image.tag}
          imagePullPolicy: ${values:image.pullPolicy}
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: ${values:targetPort}
          #   initialDelaySeconds: 15
          #   periodSeconds: 30
          ports:
            - containerPort: ${values:containerPort}
