examples/micro-services/services/.kube/resources/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ${values:name}
spec:
  sessionAffinity: ClientIP
  selector:
    app: ${values:name}
  ports:
  - protocol: TCP
    port: ${values:port}
    targetPort: ${values:targetPort}
