examples/micro-services/services/.kube/resources/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${values:name}
spec:
  host: ${values:name}
  subsets:
    - name: ${values:subset}
      labels:
        version: ${values:subset}
