examples/micro-services/services/.kube/resources/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${values:name}
spec:
  hosts:
  - "*"
  gateways:
  - ${values:name}-gateway
  http:
  - match:
    - headers:
        "version":
          exact: ${values:subset}
    route:
    - destination:
        port:
          number: ${values:containerPort}
        host: ${values:name}
        subset: ${values:subset}
